vlib/v/checker/tests/heap_no_ref.vv
[heap]
struct Foo {
	a int
}

fn (f Foo) geta() int {
	return f.a
}

fn getf() Foo {
	return Foo{9}
}

fn geta2(f Foo) int {
	return f.a
}

fn main() {
	f := Foo{3}
	assert f.a == 3
}
